--- a/app/globals.css
+++ b/app/globals.css
@@ -1,21 +1,61 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-
+/* Define your custom color variables */
 :root {
-  --background: #ffffff;
-  --foreground: #171717;
+  --color-primary: #868686; /* Dark gray */
+  --color-secondary: #1fa45b; /* Green */
+  --color-light-gray: #e2e2e2; /* Light gray */
+  --color-very-light-gray: #f9f9f9; /* Very light gray */
+  --color-light-blue: #e8f0f5; /* Light blue */
+  --color-white: #ffffff; /* White */
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
+/* Apply your custom colors with Tailwind classes */
+.bg-primary {
+  background-color: var(--color-primary);
 }
 
-body {
-  color: var(--foreground);
-  background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
+.text-primary {
+  color: var(--color-primary);
+}
+
+.bg-secondary {
+  background-color: var(--color-secondary);
+}
+
+.text-secondary {
+  color: var(--color-secondary);
+}
+
+.bg-light-gray {
+  background-color: var(--color-light-gray);
+}
+
+.text-light-gray {
+  color: var(--color-light-gray);
+}
+
+.bg-very-light-gray {
+  background-color: var(--color-very-light-gray);
+}
+
+.text-very-light-gray {
+  color: var(--color-very-light-gray);
+}
+
+.bg-light-blue {
+  background-color: var(--color-light-blue);
+}
+
+.text-light-blue {
+  color: var(--color-light-blue);
+}
+
+.bg-white {
+  background-color: var(--color-white);
+}
+
+.text-white {
+  color: var(--color-white);
 }
